package com.irina.myfirstgame.stats;

import com.irina.myfirstgame.entities.wormy.Wormy;

/**
 * Effet de statut positif qui améliore les capacités du ver.
 * <p>
 * Stub pour une fonctionnalité future de buff.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Buff extends StatusEffect {
    private String bonusType;
    private float bonusValue;
    
    @Override
    public void apply(Wormy target) {
    }
    
    @Override
    public void end(Wormy target) {
    }
}

